Name:                fdds
Version:             0.1
License:             PublicDomain
Author:              max
Category:            Web

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6


Library
  Hs-source-dirs: src
  Exposed-modules:
    Fdds

  Other-modules:
    Fdds.Parse

  -- Packages needed in order to build this package.
  Build-depends:
    base            == 4.*,
    bytestring      == 0.9.*,
    HTTP            == 4000.2.*,
    mtl             == 2.0.*,
    network         == 2.3.*,
    old-locale      == 1.0.*,
    parsec          == 3.1.*,
    tagsoup         == 0.12.*,
    tagsoup-parsec  == 0.0.*,
    text            == 0.11.*,
    time            >= 1.2 && <= 1.5

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:
