Name:                fdds
Version:             0.1.0.1
License:             PublicDomain
Author:              max
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 7.6.1

Library
  Hs-source-dirs: src
  Exposed-modules:
    Fdds

  Other-modules:
    Fdds.Parse

  Build-depends:
    base            == 4.*,
    bytestring      == 0.10.*,
    HTTP            == 4000.2.*,
    mtl             == 2.1.*,
    network         == 2.3.*,
    old-locale      == 1.0.*,
    parsec          == 3.1.*,
    tagsoup         == 0.12.*,
    tagsoup-parsec  == 0.0.*,
    text            == 0.11.*,
    time            >= 1.2 && <= 1.5
